[package]
name = "octree"
version = "0.1.0"
edition = "2021"
authors = ["Wenqing Zong wenqing.zong98@gmail.com"]
license = "Apache-2.0"
description = "A highly optimised Octree library"

[lib]
name = "octree"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "bin/example.rs"

[[bin]]
name = "bench"
path = "bin/bench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.38"
other_octree = {version = "0.1.0", package = "octree"}
timeit = "0.1.2"
